--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "normalize.css": "^8.0.1",
     "postcss": "^8.4.12",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
